@@ -1,13 +1,6 @@
 MyFaces Known Issues
 ====================
 
-* Problems with Tomcat 4.1.x
-  Symptoms: 1. Every other request throws a ServletException. Doing a browser
-               refresh renders the page.
-            2. ResourceBundle handling is completly broken. Navigation item
-               labels are totally messed.
-  Reason: Not known yet. Perhaps Tomcat's ClassLoader makes problems?
-
 * Sun's current implementation of the FacesTag has a bug, that makes problems
   when you use IterationTag support:
   For each tag they count the number of children tags in a member "numChildren".
@@ -21,14 +14,21 @@ MyFaces Known Issues
 * Dynamic addition of components as stated in JSF.2.4.2.4 is not (yet) supported
   when using the "saveStateInClient" feature.
 
-* Sun's implementation has a bug in UIComponentBase that causes a NPE when
-  getClientId is called for a Facet, that is not itself a NamingContainer. Reason
-  is, that they try to search the naming container, this component (facet) belongs
-  to. But since facets do not have a parent (see JSF.3.1.6) this is subject to fail.
-  Please delegate getClientId of your self-written components to the MyFaces
-  implementation of getClientId in UIComponentUtils!
-
-
+* Facet support of JSF API is buggy.
+  1. UIComponentBase causes a NPE when getClientId is called for a Facet,
+     that is not itself a NamingContainer. Reason is, that they try to search
+     the naming container this component (facet) belongs to. But since facets do
+     not have a parent per definition (see JSF.3.1.6) this is subject to fail.
+  2. The addChild methods in UIComponentBase try to find a naming container for
+     the component. This is also subject to fail when called for a facet that is
+     not itself a NamingContainer.
+  Please delegate the following methods of your self-written components to
+  net.sourceforge.myfaces.component.UIComponentHelper to make them "facet-able":
+  - getClientId(FacesContext context)
+  - addFacet(String facetName, UIComponent facet) (after calling super.addFacet !)
+  - getParent(UIComponent superGetParent)
+  See net.sourceforge.myfaces.component.UISelectBoolean for an example of
+  delegation.
 
 
 TODO... (Many others!)
