@@ -18,6 +18,7 @@ Changes in Release 0.3.2
 * "errors" tag renamed to "output_errors"
 * "image" tag renamed to "graphic_image"
 * "input_errors" tag was removed (see "output_errors")
+* Facet support (see KnownIssues.txt !)
 
 ----------------------------------------------------------------------
 Changes in Release 0.3.1
